--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
-    "hardhat": "^2.6.4"
+    "hardhat": "^2.6.4",
+    "hardhat-exposed": "^0.2.3"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.3.2"
